--- a/Project 3 - Bank/Project 3 - Bank.vcxproj
+++ b/Project 3 - Bank/Project 3 - Bank.vcxproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="clsBankClient.h" />
+    <ClInclude Include="clsClientListScreen.h" />
     <ClInclude Include="clsMainScreen.h" />
     <ClInclude Include="clsPerson.h" />
     <ClInclude Include="clsScreen.h" />
