Add New Client Screen Seperate UI from Business (Moved print())

--- a/Project 3 - Bank/Project 3 - Bank.vcxproj
+++ b/Project 3 - Bank/Project 3 - Bank.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="clsAddNewClientScreen.h" />
     <ClInclude Include="clsBankClient.h" />
     <ClInclude Include="clsClientListScreen.h" />
     <ClInclude Include="clsMainScreen.h" />
