--- a/Project 3 - Bank/Project 3 - Bank.vcxproj.filters
+++ b/Project 3 - Bank/Project 3 - Bank.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="clsUpdateClientScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="clsFindClientScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
