--- a/Project 3 - Bank/Project 3 - Bank.vcxproj.filters
+++ b/Project 3 - Bank/Project 3 - Bank.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="clsTransactionsScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="clsTotalBalancesScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
