Bank - Deposit Screen

--- a/Project 3 - Bank/Project 3 - Bank.vcxproj.filters
+++ b/Project 3 - Bank/Project 3 - Bank.vcxproj.filters
@@ -53,5 +53,8 @@
     <ClInclude Include="clsTotalBalancesScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="clsDepositScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
