Bank - Withdraw Screen

--- a/Project 3 - Bank/Project 3 - Bank.vcxproj
+++ b/Project 3 - Bank/Project 3 - Bank.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="clsTotalBalancesScreen.h" />
     <ClInclude Include="clsTransactionsScreen.h" />
     <ClInclude Include="clsUpdateClientScreen.h" />
+    <ClInclude Include="clsWithdrawScreen.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
