--- a/Project 3 - Bank/Project 3 - Bank.vcxproj.filters
+++ b/Project 3 - Bank/Project 3 - Bank.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="clsDepositScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="clsWithdrawScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
