--- a/Project 3 - Bank/Project 3 - Bank.vcxproj.filters
+++ b/Project 3 - Bank/Project 3 - Bank.vcxproj.filters
@@ -80,5 +80,14 @@
     <ClInclude Include="clsFindUserScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="clsLoginScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="globals.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="clsAccessDeniedScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
