Program Main Screen

--- a/Project 4 - Currency Exchange/Project 4 - Currency Exchange.vcxproj
+++ b/Project 4 - Currency Exchange/Project 4 - Currency Exchange.vcxproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="clsCurrency.h" />
+    <ClInclude Include="clsMainScreen.h" />
     <ClInclude Include="clsScreen.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
