--- a/Project 4 - Currency Exchange/Project 4 - Currency Exchange.vcxproj.filters
+++ b/Project 4 - Currency Exchange/Project 4 - Currency Exchange.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="clsScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="clsMainScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
