Implement List currencies screen

--- a/Project 4 - Currency Exchange/Project 4 - Currency Exchange.vcxproj.filters
+++ b/Project 4 - Currency Exchange/Project 4 - Currency Exchange.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="clsMainScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="clsListCurrenciesScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
