Implement find currency screen

--- a/Project 4 - Currency Exchange/Project 4 - Currency Exchange.vcxproj.filters
+++ b/Project 4 - Currency Exchange/Project 4 - Currency Exchange.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="clsListCurrenciesScreen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="clsFindCurrencyScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
