--- a/Project 4 - Currency Exchange/Project 4 - Currency Exchange.vcxproj
+++ b/Project 4 - Currency Exchange/Project 4 - Currency Exchange.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="clsListCurrenciesScreen.h" />
     <ClInclude Include="clsMainScreen.h" />
     <ClInclude Include="clsScreen.h" />
+    <ClInclude Include="clsUpdateCurrencyScreen.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
