--- a/Project 4 - Currency Exchange/Project 4 - Currency Exchange.vcxproj
+++ b/Project 4 - Currency Exchange/Project 4 - Currency Exchange.vcxproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="clsCurrency.h" />
+    <ClInclude Include="clsCurrencyCalculatorScreen.h" />
     <ClInclude Include="clsFindCurrencyScreen.h" />
     <ClInclude Include="clsListCurrenciesScreen.h" />
     <ClInclude Include="clsMainScreen.h" />
